--- a/probe_design.yaml
+++ b/probe_design.yaml
@@ -17,7 +17,7 @@ file_genome_fasta: ./data/ensemble_45/GCF_000001405.39_GRCh38.p13_genomic.fna
 # If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: []
 # If probes should only be designed for specific genes, provide a gene_list, e.g. gene_list: ['ACHE', 'ACIN1', 'ACLY', 'NOTCH4_2', 'NOX1', 'NOX4']
 gene_list: []
-#gene_list: ['ACHE', 'ACIN1', 'ACLY', 'NOTCH4_2', 'NOX1', 'NOX4'] # ncbi test list
+#gene_list: ['ACHE', 'ACIN1', 'ACLY', 'NOTCH4_2', 'NOX1', 'NOX4', 'SPINT1', 'ZNF300'] # ncbi test list
 #gene_list: ['ENSG00000000003', 'ENSG00000000938', 'ENSG00000001631', 'ENSG00000003393', 'ENSG00000004777', 'ENSG00000005302', 'ENSG00000005844', 'ENSG00000006071'] # ensemble test list
 
 
