--- a/probe_design.yaml
+++ b/probe_design.yaml
@@ -3,23 +3,19 @@
 # If False: provide gene annotation (gtf) and genome file (fasta).
 get_annotation: True   
 
-# provide if get_annotation = true
+# provide if get_annotation = true --> download annotation from NCBI or Ensemble
 source: ensemble # available sources: 'ncbi' and 'ensemble'
-release_ensemble: 104 # release number of ensemble annotation
 
-# provide file if get_annotation = false
-file_gene_gtf: ./data/ensemble_45/GCF_000001405.39_GRCh38.p13_genomic.gtf
-file_genome_fasta: ./data/ensemble_45/GCF_000001405.39_GRCh38.p13_genomic.fna
+# provide file if get_annotation = False
+file_gene_gtf: 
+file_genome_fasta: 
 
 
 
 ### Which geneset should be used? 
-# If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: []
-# If probes should only be designed for specific genes, provide a gene_list, e.g. gene_list: ['ACHE', 'ACIN1', 'ACLY', 'NOTCH4_2', 'NOX1', 'NOX4']
-gene_list: []
-#gene_list: ['ACHE', 'ACIN1', 'ACLY', 'NOTCH4_2', 'NOX1', 'NOX4'] # ncbi test list
-#gene_list: ['ENSG00000000003', 'ENSG00000000938', 'ENSG00000001631', 'ENSG00000003393', 'ENSG00000004777', 'ENSG00000005302', 'ENSG00000005844', 'ENSG00000006071'] # ensemble test list
-
+# If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: 
+# If probes should only be designed for specific genes, provide a file with a list of genes (each row should contain one gene name in ensemble or NCBI format), e.g. gene_list: ./data/ensemble_gene_list.txt
+file_genes: ./data/ensemble_gene_list.txt
 
 
 ### Parameters for probe design
@@ -28,25 +24,23 @@ GC_content_min: 40 #minimum GC content of probes
 GC_content_max: 60 #maximum GC content of probes
 Tm_min: 68 #minimum melting temperature of probes
 Tm_max: 75 #maximum melting temperature of probes
-min_probes_per_gene: 2 #minimum number of probes per gene
+min_probes_per_gene: 3 #minimum number of probes per gene
 
 
 
 ### Parameters for Blastn search
+num_threads: 8 #number of threads for parallele run of blast
 word_size: 10 #word size for the blastn seed (exact match to target)
 coverage: 0.5 #minimum coverage between probes and target sequence (blast parameter "coverage"), ranging from 0 tp 1 (full coverage).
 percent_identity: 0.8 #Maximum similarity between probes and target sequences (blast parameter "percent identity"), ranging from 0 tp 1 (no missmatch).
 
 
 
-### Where should the results be stored?
-dir_output: ./data/ensemble_45/ #output directory
-
-
-### Optional parameters: 
+# How many Blast runs should run in parallele
+number_batchs: 4
 
 # How many genes should be processed in one batch?
-batch_size: 500 
+# batch_size: 300
 
 
 # parameters for melting temperature
@@ -68,3 +62,32 @@ Tm_parameters:
   Mg: 0
   dNTPs: 0
   saltcorr: 5
+
+
+# parameters for download of ensemble (release 104) annotation from ftp server 
+ftp_gene_ensemble:
+  ftp_link: 'ftp.ensembl.org' # link to ftp server
+  directory: 'pub/release-104/gtf/homo_sapiens' # directory that contains gene annotation file
+  file_name: 'Homo_sapiens.GRCh38.104.gtf' # name of gene annotation file
+
+ftp_genome_ensemble:
+  ftp_link: 'ftp.ensembl.org' # link to ftp server
+  directory: 'pub/release-104/fasta/homo_sapiens/dna' # directory that contains genome annotation file (gtf)
+  file_name: 'Homo_sapiens.GRCh38.dna_rm.primary_assembly.fa' # name of genome annotation file (fasta)
+
+
+# parameters for download of download latest NCBI annotation from ftp server
+ftp_gene_ncbi:
+  ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
+  directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers' # directory that contains gene annotation file
+  file_name: 'GCF_000001405.39_GRCh38.p13_genomic.gtf' # name of gene annotation file
+
+ftp_genome_ncbi:
+  ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
+  directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers' # directory that contains genome annotation file (gtf)
+  file_name: 'GCF_000001405.39_GRCh38.p13_genomic.fna' # name of genome annotation file (fasta)
+
+ftp_chr_mapping_ncbi:
+  ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
+  directory: 'genomes/all/GCF/000/001/405/GCF_000001405.39_GRCh38.p13' # directory that contains chromosome mapping file
+  file_name: 'assembly_report.txt' # name of chromosome mapping file
