--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -1,18 +1,18 @@
 ### Parameters for genome and gene annotation
 # Which annotation should be used? Ensemble or NCBI?
-source: ensemble # available sources: 'ncbi' and 'ensemble'
+source: ncbi # available sources: 'ncbi' and 'ensemble'
 
 # If own annotation files should be used, provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
 # If no files are provided (e.g. file_gene_gtf: null), gene annotation file (gtf) as well as genome file (fasta) are retrieved from 'source'.
-file_gene_gtf: null #./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
-file_genome_fasta: null #./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
+file_gene_gtf: ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
+file_genome_fasta: ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
 
 
 
 ### Which geneset should be used? 
 # If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: null
 # If probes should only be designed for specific genes, provide a file with a list of genes (each row should contain one gene name in ensemble or NCBI format), e.g. gene_list: ./data/ensemble_gene_list.txt
-file_genes: null #./data/ncbi_gene_list.txt
+file_genes: ./data/genes_ncbi_10.txt
 
 
 
@@ -27,7 +27,7 @@ min_probes_per_gene: 3 #minimum number of probes per gene
 
 
 ### Parameters for Blastn search
-num_threads: 8 #number of threads for parallel run of blast
+num_threads: 1 #number of threads for parallel run of blast
 word_size: 10 #word size for the blastn seed (exact match to target)
 coverage: 50 #minimum coverage between probes and target sequence, ranging from 0 to 100% (full coverage)
 percent_identity: 80 #maximum similarity between probes and target sequences, ranging from 0 to 100% (no missmatch)
