--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -17,12 +17,13 @@ file_genes: ./data/genes_ncbi_10.txt
 
 
 ### Parameters for probe design
-probe_length: 45 #length of probes
+probe_length_min: 43 #min length of probes
+probe_length_max: 45 #max length of probes
 GC_content_min: 40 #minimum GC content of probes
 GC_content_max: 60 #maximum GC content of probes
 Tm_min: 68 #minimum melting temperature of probes
 Tm_max: 75 #maximum melting temperature of probes
-min_probes_per_gene: 3 #minimum number of probes per gene
+min_probes_per_gene: 1 #minimum number of probes per gene
 
 
 
@@ -31,7 +32,7 @@ num_threads: 1 #number of threads for parallel run of blast
 word_size: 10 #word size for the blastn seed (exact match to target)
 coverage: 50 #minimum coverage between probes and target sequence, ranging from 0 to 100% (full coverage)
 percent_identity: 80 #maximum similarity between probes and target sequences, ranging from 0 to 100% (no missmatch)
-ligation_site: 5 #coverage between probes and target sequence should not span ligation site (e.g. ligation_site = 5 would correspond to -4 to +5 nt around probe center), if ligation_site = 0, omit this requirement
+ligation_site: 0 #coverage between probes and target sequence should not span ligation site (e.g. ligation_site = 5 would correspond to -4 to +5 nt around probe center), if ligation_site = 0, omit this requirement
 
 
 # How many Blast runs should run in parallele
@@ -76,17 +77,22 @@ ftp_chr_mapping_ensemble: #no chromosome mapping needed for ensemble
 ftp_gene_ncbi:
   ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
   directory: 'genomes/all/annotation_releases/9606/109.20211119/GCF_000001405.39_GRCh38.p13' # directory that contains gene annotation file
+  #directory: 'genomes/all/annotation_releases/9606/109/GCF_000001405.38_GRCh38.p12'
   #directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers'
   file_name: 'GCF_000001405.39_GRCh38.p13_genomic.gtf' # name of gene annotation file
+  #file_name: 'GCF_000001405.38_GRCh38.p12_genomic.gtf' 
 
 ftp_genome_ncbi:
   ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
   directory: 'genomes/all/annotation_releases/9606/109.20211119/GCF_000001405.39_GRCh38.p13' # directory that contains genome annotation file (gtf)
+  #directory: 'genomes/all/annotation_releases/9606/109/GCF_000001405.38_GRCh38.p12'
   #directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers'
   file_name: 'GCF_000001405.39_GRCh38.p13_genomic.fna' # name of genome annotation file (fasta)
+  #file_name: 'GCF_000001405.38_GRCh38.p12_genomic.fna'
 
 ftp_chr_mapping_ncbi:
   ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
   directory: 'genomes/all/annotation_releases/9606/109.20211119/GCF_000001405.39_GRCh38.p13' # directory that contains gene annotation file
+  #directory: 'genomes/all/annotation_releases/9606/109/GCF_000001405.38_GRCh38.p12'
   #directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers' 
   file_name: 'assembly_report.txt' # name of chromosome mapping file
