--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -4,8 +4,8 @@ source: ncbi # available sources: 'ncbi' and 'ensemble'
 
 # If own annotation files should be used, provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
 # If no files are provided (e.g. file_gene_gtf: null), gene annotation file (gtf) as well as genome file (fasta) are retrieved from 'source'.
-file_gene_gtf: ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
-file_genome_fasta: ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
+file_gene_gtf: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
+file_genome_fasta: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
 
 
 
@@ -20,9 +20,12 @@ file_genes: ./data/genes_ncbi_10.txt
 probe_length_min: 43 #min length of probes
 probe_length_max: 45 #max length of probes
 GC_content_min: 40 #minimum GC content of probes
+GC_content_opt: 50 #optimal GC content of probes
 GC_content_max: 60 #maximum GC content of probes
 Tm_min: 68 #minimum melting temperature of probes
+Tm_opt: 72 #optimal melting temperature of probes
 Tm_max: 75 #maximum melting temperature of probes
+n_probes_per_gene: 5 #ideal number of probes per gene
 min_probes_per_gene: 1 #minimum number of probes per gene
 
 
