--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -17,16 +17,23 @@ file_genes: ./data/genes_ncbi_10.txt
 
 
 ### Parameters for probe design
-probe_length_min: 43 #min length of probes
+probe_length_min: 38 #min length of probes
 probe_length_max: 45 #max length of probes
 GC_content_min: 40 #minimum GC content of probes
 GC_content_opt: 50 #optimal GC content of probes
 GC_content_max: 60 #maximum GC content of probes
-Tm_min: 68 #minimum melting temperature of probes
-Tm_opt: 72 #optimal melting temperature of probes
-Tm_max: 75 #maximum melting temperature of probes
+Tm_min: 52 #55 #minimum melting temperature of probes
+Tm_opt: 60 #60 #optimal melting temperature of probes
+Tm_max: 67 #63 #maximum melting temperature of probes
 n_probes_per_gene: 5 #ideal number of probes per gene
 min_probes_per_gene: 1 #minimum number of probes per gene
+# probe arms
+arm_length_min: 10 #min length of each arm
+arm_Tm_min: 38 #41 #minimum melting temperature of each arm
+arm_Tm_max: 49 #46 #maximum melting temperature of each arm
+arm_Tm_dif_max: 2 #maximum melting temperature difference of both arms
+# detection oligo
+detect_oligo_Tm_opt: 30 # not sure if we should also define a min and max, think we always get oligos that work
 
 
 
@@ -44,23 +51,41 @@ number_subbatches: 1 #number of batches into which the input is divided, i.e. di
 
 # parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
 Tm_parameters:
-  check: True
-  strict: True
-  c_seq: null
-  shift: 0
-  nn_table: DNA_NN3
-  tmm_table: DNA_TMM1
-  imm_table: DNA_IMM1
-  de_table: DNA_DE1
-  dnac1: 25
-  dnac2: 25
-  selfcomp: False
-  Na: 50
-  K: 0
-  Tris: 0
-  Mg: 0
-  dNTPs: 0
-  saltcorr: 5
+    shared:
+        check: True
+        strict: True
+        c_seq: null
+        shift: 0
+        nn_table: DNA_NN3
+        tmm_table: DNA_TMM1
+        imm_table: DNA_IMM1
+        de_table: DNA_DE1
+        dnac1: 50 #[nM]
+        dnac2: 0
+        selfcomp: False
+        dNTPs: 0
+        saltcorr: 7
+    probe:
+        Na: 1.25 #[mM]
+        K: 75 #[mM]
+        Tris: 20 #[mM]
+        Mg: 10 #[mM]    
+    detection_oligo:
+        Na: 39 #[mM]
+        K: 0 #[mM]
+        Tris: 0 #[mM]
+        Mg: 0 #[mM]
+Tm_correction_parameters:
+    shared:
+        DMSO: 0
+        DMSOfactor: 0.75
+        fmdfactor: 0.65
+        fmdmethod: 1
+        GC: null
+    probe:
+        fmd: 20
+    detection_oligo:
+        fmd: 30
 
 
 # parameters for download of ensemble (release 104) annotation from ftp server 
