--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -33,7 +33,9 @@ arm_Tm_min: 38 #41 #minimum melting temperature of each arm
 arm_Tm_max: 49 #46 #maximum melting temperature of each arm
 arm_Tm_dif_max: 2 #maximum melting temperature difference of both arms
 # detection oligo
+detect_oligo_length_min: 12 #min length of detection oligo
 detect_oligo_Tm_opt: 30 # not sure if we should also define a min and max, think we always get oligos that work
+
 
 
 
