--- a/probedesign.yaml
+++ b/probedesign.yaml
@@ -29,14 +29,15 @@ n_probes_per_gene: 5 #ideal number of probes per gene
 min_probes_per_gene: 1 #minimum number of probes per gene
 # probe arms
 arm_length_min: 10 #min length of each arm
-arm_Tm_min: 38 #41 #minimum melting temperature of each arm
+arm_Tm_min: 38 #41 #minimum melting temperature of each arm (difference shouldn't be higher than 5! But range is not super important, the lower the better)
 arm_Tm_max: 49 #46 #maximum melting temperature of each arm
 arm_Tm_dif_max: 2 #maximum melting temperature difference of both arms
 # detection oligo
-detect_oligo_length_min: 12 #min length of detection oligo
-detect_oligo_Tm_opt: 30 # not sure if we should also define a min and max, think we always get oligos that work
-
-
+detect_oligo_length_min: 18 #min length of detection oligo
+detect_oligo_length_max: 25 #max length of detection oligo
+detect_oligo_Tm_opt: 32 # not sure if we should also define a min and max, think we always get oligos that work
+# based on the average Tm of multiple example seqs we set it to 32, even though the last info on ideal Tm was 30
+#TODO: blast detection oligo against other padlock probes that are used (espc for short sequence)
 
 
 ### Parameters for Blastn search
