Update ftp download with filename instead of symbolic link

--- a/config/ftp/default.yaml
+++ b/config/ftp/default.yaml
@@ -14,10 +14,10 @@ ftp_chr_mapping_ensemble: #no chromosome mapping needed for ensemble
 # parameters for download of download latest NCBI annotation from ftp server
 ftp_gene_ncbi:
   ftp_link: 'ftp.ncbi.nlm.nih.gov' # link to ftp server
-  directory: 'genomes/all/annotation_releases/9606/109.20211119/GCF_000001405.39_GRCh38.p13' # directory that contains gene annotation file
+  directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers' # directory that contains gene annotation file
   #directory: 'genomes/all/annotation_releases/9606/109/GCF_000001405.38_GRCh38.p12'
   #directory: 'refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers'
-  file_name: 'GCF_000001405.39_GRCh38.p13_genomic.gtf' # name of gene annotation file
+  file_name: 'GRCh38_latest_genomic.gtf.gz' # name of gene annotation file
   #file_name: 'GCF_000001405.38_GRCh38.p12_genomic.gtf' 
 
 ftp_genome_ncbi:
