--- a/config/padlock_probe_designer.yaml
+++ b/config/padlock_probe_designer.yaml
@@ -1,23 +1,100 @@
 ### Parameters for genome and gene annotation
-# Which annotation should be used? Ensemble or NCBI?
-source: ncbi # available sources: 'ncbi' and 'ensemble'
+# Which annotation should be used? Ensemble, NCBI or custom?
+species: human # available species: human or mouse
+genome_assembly: GRCh38 # genome assembly for species | for human: GRCh37 or GRCh38 | for mouse: GRCm38 or GRCm39
+annotation_source: custom # available sources: 'ncbi', 'ensemble' or 'custom', if you use custom please provide file_gene_gtf and file_genome_fasta
+annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi) of annotation or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/ or for ensemble at ftp.ensembl.org/pub/ 
 
-# If own annotation files should be used, provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
+# If own annotation files should be used, set annotation_source to 'custom' and provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
 # If no files are provided (e.g. file_gene_gtf: null), gene annotation file (gtf) as well as genome file (fasta) are retrieved from 'source'.
-file_gene_gtf: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
-file_genome_fasta: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
+file_gene_gtf:  #./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.gtf
+file_genome_fasta:  #./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.fna
 
 
 
 ### Which geneset should be used? 
-# If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: null
+# If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: 
 # If probes should only be designed for specific genes, provide a file with a list of genes (each row should contain one gene name in ensemble or NCBI format), e.g. gene_list: ./data/ensemble_gene_list.txt
-file_genes: ${hydra:runtime.cwd}/data/genes_ncbi_10.txt
+file_genes: #./data/genes_ncbi_10.txt
 
-dir_output: ${hydra:runtime.cwd}/my_out
 
-defaults:
-  - specificity_filter: blastn
-  - ftp: default
-  - melting_temperature: default
-  - probe_design: default
+
+### Parameters for padlock probe design
+probe_length_min: 38 #min length of probes 
+probe_length_max: 45 #max length of probes
+
+GC_content_min: 40 #minimum GC content of probes
+GC_content_opt: 50 #optimal GC content of probes
+GC_content_max: 60 #maximum GC content of probes
+
+Tm_min: 52 #55 #minimum melting temperature of probes
+Tm_opt: 60 #60 #optimal melting temperature of probes
+Tm_max: 67 #63 #maximum melting temperature of probes
+
+n_probes_per_gene: 5 #ideal number of probes per gene
+min_probes_per_gene: 2 #minimum number of probes per gene
+# probe arms
+arm_length_min: 10 #min length of each arm
+arm_Tm_min: 38 #41 #minimum melting temperature of each arm (difference shouldn't be higher than 5! But range is not super important, the lower the better)
+arm_Tm_max: 49 #46 #maximum melting temperature of each arm
+arm_Tm_dif_max: 2 #maximum melting temperature difference of both arms
+# detection oligo
+detect_oligo_length_min: 18 #min length of detection oligo
+detect_oligo_length_max: 25 #max length of detection oligo
+detect_oligo_Tm_opt: 32 # not sure if we should also define a min and max, think we always get oligos that work
+# based on the average Tm of multiple example seqs we set it to 32, even though the last info on ideal Tm was 30
+#TODO: blast detection oligo against other padlock probes that are used (espc for short sequence)
+
+
+
+### Parameters for Blastn search
+
+# How many Blast runs should run in parallele
+number_batchs: 2 #number of threads running in parallel, each starts one blastn run
+
+# Blastn parameters
+word_size: 10 #word size for the blastn seed (exact match to target)
+coverage: 50 #minimum coverage between probes and target sequence, ranging from 0 to 100% (full coverage)
+percent_identity: 80 #maximum similarity between probes and target sequences, ranging from 0 to 100% (no missmatch)
+ligation_region: 0 #coverage between probes and target sequence should not span region around ligation site (e.g. ligation_region = 5 would correspond to -4 to +5 nt around ligation site), if ligation_region = 0, omit this requirement
+
+
+
+# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
+Tm_parameters:
+    shared:
+        check: True
+        strict: True
+        c_seq: null
+        shift: 0
+        nn_table: DNA_NN3
+        tmm_table: DNA_TMM1
+        imm_table: DNA_IMM1
+        de_table: DNA_DE1
+        dnac1: 50 #[nM]
+        dnac2: 0
+        selfcomp: False
+        dNTPs: 0
+        saltcorr: 7
+    probe:
+        Na: 1.25 #[mM]
+        K: 75 #[mM]
+        Tris: 20 #[mM]
+        Mg: 10 #[mM]    
+    detection_oligo:
+        Na: 39 #[mM]
+        K: 0 #[mM]
+        Tris: 0 #[mM]
+        Mg: 0 #[mM]
+Tm_correction_parameters:
+    shared:
+        DMSO: 0
+        DMSOfactor: 0.75
+        fmdfactor: 0.65
+        fmdmethod: 1
+        GC: null
+    probe:
+        fmd: 20
+    detection_oligo:
+        fmd: 30
+
