--- a/config/padlock_probe_designer.yaml
+++ b/config/padlock_probe_designer.yaml
@@ -7,15 +7,15 @@ annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi)
 
 # If own annotation files should be used, set annotation_source to 'custom' and provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
 # If no files are provided (e.g. file_gene_gtf: null), gene annotation file (gtf) as well as genome file (fasta) are retrieved from 'source'.
-file_gene_gtf:  #./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.gtf
-file_genome_fasta:  #./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.fna
+file_gene_gtf:  ./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.gtf
+file_genome_fasta:  ./data_ncbi/annotations/GCF_000001405.40_GRCh38.p14_genomic.fna
 
 
 
 ### Which geneset should be used? 
 # If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: 
 # If probes should only be designed for specific genes, provide a file with a list of genes (each row should contain one gene name in ensemble or NCBI format), e.g. gene_list: ./data/ensemble_gene_list.txt
-file_genes: #./data/genes_ncbi_10.txt
+file_genes: ./data/genes_ncbi_10.txt
 
 
 
