--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -24,6 +24,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
+        conda update -n base -c defaults conda
         conda install -c bioconda bowtie
         conda install -c bioconda bowtie2
         conda install -c bioconda blast
