--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -16,14 +16,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.8
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: anaconda-client-env
+        auto-activate-base: true
     - name: Install dependencies
       run: |
-        conda update -n base -c defaults conda
+        conda create -n "oligo_env"
         conda install -c bioconda blast
         conda install -c bioconda bedtools
-        conda install -c bioconda bowtie
-        conda install -c bioconda bowtie2
