--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -23,5 +23,6 @@ jobs:
     - name: Install dependencies
       run: |
         conda create -n "oligo_env"
+        conda activate oligo_env
         conda install -c bioconda blast
         conda install -c bioconda bedtools
