--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -24,4 +24,5 @@ jobs:
       run: |
         conda install -c bioconda blast
         conda install -c bioconda bedtools
+        conda install -c bioconda bowtie2
         pip install .
