--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -2,7 +2,7 @@ name: Python Package using Conda
 
 on: 
   push:
-    branches: dev
+    branches: dev-tests
 
 jobs:
   build-linux:
@@ -24,5 +24,8 @@ jobs:
       run: |
         conda install -c bioconda blast
         conda install -c bioconda bedtools
-        conda install -c bioconda bowtie2
         pip install .
+    
+    - name: Run tests
+      run: |
+        pytest
