--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: anaconda-client-env
@@ -24,6 +24,7 @@ jobs:
       run: |
         conda install -c bioconda blast
         conda install -c bioconda bedtools
+        pip install pytest
         pip install .
     
     - name: Run tests
