--- a/config/padlock_probe_designer.yaml
+++ b/config/padlock_probe_designer.yaml
@@ -1,23 +1,113 @@
+### General parameters
+dir_output: output # name of the directory where the output files will be written
+n_jobs: 12 # number of cores used to run the pipeline
+write_removed_genes: True # write in a file the removed genes
+write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
+file_format: tsv # fromat of the written files, can be "tas" or "gtf"
+
+
 ### Parameters for genome and gene annotation
 # Which annotation should be used? Ensemble or NCBI?
-source: ncbi # available sources: 'ncbi' and 'ensemble'
+source: ncbi # available sources: 'ncbi', 'ensemble' or 'custom', if you use custom please provide file_gene_gtf and file_genome_fasta
+species: human # available species: human or mouse
+annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi) of annotation or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/ or for ensemble at ftp.ensembl.org/pub/
+min_probes_per_gene: 0 # minimum number of probes that a gene must have before it gets deleted
+# If 'custom' was choosen,  provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf and the relative information
+file_annotation: # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
+file_sequence: # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
+genome_assembly: GRCh38.p14
+annotation_source: NCBI
 
-# If own annotation files should be used, provide a gene annotation (gtf) and genome file (fasta), e.g. file_gene_gtf: ./data/Homo_sapiens.GRCh38.104.gtf
-# If no files are provided (e.g. file_gene_gtf: null), gene annotation file (gtf) as well as genome file (fasta) are retrieved from 'source'.
-file_gene_gtf: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.gtf
-file_genome_fasta: null  # ./data_ncbi/annotations/GCF_000001405.39_GRCh38.p13_genomic.fna
+
+
+### Parameters for oligo sequences generation
+probe_length_min: 38 #min length of probes
+probe_length_max: 45 #max length of probes
+file_genes: ../data/genes_ncbi_10.txt # file with a list the genes used to generate the oligos sequences, set as None if al the genes are used
+
+
+### Parameters for the property filers
+GC_content_min: 40 #minimum GC content of probes
+GC_content_max: 60 #maximum GC content of probes
+Tm_min: 52 #55 #minimum melting temperature of probes
+Tm_max: 67 #63 #maximum melting temperature of probes
+# probe arms
+min_arm_length: 10 #min length of each arm
+max_arm_Tm_dif: 2 #maximum melting temperature difference of both arms
+arm_Tm_min: 38 #41 #minimum melting temperature of each arm (difference shouldn't be higher than 5! But range is not super important, the lower the better)
+arm_Tm_max: 49 #46 #maximum melting temperature of each arm
+
+
+### Parameters for the specificity filters
+# Blastn parameters
+word_size: 10 #word size for the blastn seed (exact match to target)
+coverage: 50 #minimum coverage between probes and target sequence, ranging from 0 to 100% (full coverage)
+percent_identity: 80 #maximum similarity between probes and target sequences, ranging from 0 to 100% (no missmatch)
+ligation_region_size: 10 #coverage between probes and target sequence should not span region around ligation site (e.g. ligation_region = 5 would correspond to -4 to +5 nt around ligation site), if ligation_region = 0, omit this requirement
 
 
 
-### Which geneset should be used?
-# If probes should be designed for all genes of the provided annotation, leave gene_list empty, i.e. gene_list: null
-# If probes should only be designed for specific genes, provide a file with a list of genes (each row should contain one gene name in ensemble or NCBI format), e.g. gene_list: ./data/ensemble_gene_list.txt
-file_genes: ${hydra:runtime.cwd}/data/genes_ncbi_10.txt
 
-dir_output: ${hydra:runtime.cwd}/my_out
+### Parameters for the oligo efficiency
+# Here also Tm_min, Tm_max, GC_content_min, GC_content_max are used, but have been defined before
+Tm_opt: 60 #60 #optimal melting temperature of probes
+GC_content_opt: 50 #optimal GC content of probes
+Tm_weight: 1 # weight of the Tm of the probe in the efficiency score
+GC_weight: 1 # weight of the GC content of the probe in the efficiency score
 
-defaults:
-  - specificity_filter: blastn
-  - ftp: default
-  - melting_temperature: default
-  - probe_design: default
+
+
+
+### Parameters for the probesets generation
+probeset_size: 5 #ideal number of probes per probeset
+min_probeset_size: 2 #minimum number of probes per probeset
+n_sets: 100 # maximum number of sets per gene
+
+
+### Parameters for the padlock detection oligo design
+detect_oligo_length_min: 18 # min length of detection oligo
+detect_oligo_length_max: 25 # max length of detection oligo
+detect_oligo_Tm_opt: 32 # optimal melting temperature of detection oligo
+
+
+
+### Shared parameters
+# The melting temperature is used in 2 different stages (property filters and padlock detection oligo design), where a few parameters are shared and the others differ.
+# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
+Tm_parameters:
+    shared:
+        check: True
+        strict: True
+        c_seq: null
+        shift: 0
+        nn_table: DNA_NN3
+        tmm_table: DNA_TMM1
+        imm_table: DNA_IMM1
+        de_table: DNA_DE1
+        dnac1: 50 #[nM]
+        dnac2: 0
+        selfcomp: False
+        dNTPs: 0
+        saltcorr: 7
+    property_filter:
+        Na: 1.25 #[mM]
+        K: 75 #[mM]
+        Tris: 20 #[mM]
+        Mg: 10 #[mM]
+    detection_oligo:
+        Na: 39 #[mM]
+        K: 0 #[mM]
+        Tris: 0 #[mM]
+        Mg: 0 #[mM]
+
+Tm_correction_parameters:
+    shared:
+        DMSO: 0
+        DMSOfactor: 0.75
+        fmdfactor: 0.65
+        fmdmethod: 1
+        GC: null
+    property_filter:
+        fmd: 20
+    detection_oligo:
+        fmd: 30
