--- a/.github/workflows/test_modules.yml
+++ b/.github/workflows/test_modules.yml
@@ -1,8 +1,15 @@
 name: Python Package using Conda
 
 on: 
-  push:
-    branches: dev
+  #push:
+  #  branches:
+  #    - main
+  #    - dev
+  #pull_request:
+  #  branches:
+  #    - main
+  #    - dev
+  workflow_dispatch:
 
 jobs:
   build-linux:
@@ -12,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: anaconda-client-env
@@ -24,5 +31,9 @@ jobs:
       run: |
         conda install -c bioconda blast
         conda install -c bioconda bedtools
-        conda install -c bioconda bowtie2
+        pip install pytest
         pip install .
+    
+    - name: Run tests
+      run: |
+        pytest
