--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,8 @@
 Sphinx==4.5.0
 sphinx-book-theme==0.3.3
-jinja2==3.1.2
+sphinx-autodocgen==1.3
+sphinxcontrib-napoleon==0.7
 nbsphinx==0.8.12
 nbsphinx-link=1.3.0
 pandoc==2.19.2
+jinja2==3.1.2
