--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,3 +7,18 @@ nbsphinx==0.8.12
 nbsphinx-link=1.3.0
 pandoc==2.19.2
 jinja2==3.1.2
+datetime
+argparse
+pandas
+iteration_utilities
+Bio
+gtfparse
+pyfaidx
+pyyaml
+pybedtools
+networkx
+omegaconf
+hydra-core
+joblib
+bcbio-gff
+six
