--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,7 +4,7 @@ sphinx-autodocgen==1.3
 sphinxcontrib-napoleon==0.7
 sphinx-autoapi=2.0.1
 nbsphinx==0.8.12
-nbsphinx-link=1.3.0
+nbsphinx-link==1.3.0
 pandoc==2.19.2
 jinja2==3.1.2
 datetime
