--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,7 +2,7 @@ Sphinx==4.5.0
 sphinx-book-theme==0.3.3
 sphinx-autodocgen==1.3
 sphinxcontrib-napoleon==0.7
-sphinx-autoapi=2.0.1
+sphinx-autoapi==2.0.1
 nbsphinx==0.8.12
 nbsphinx-link==1.3.0
 pandoc==2.19.2
