--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
 [tool.setuptools]
 packages = ["oligo_designer_toolsuite"]
 
+[tool.setuptools.dynamic]
+#version = {attr = "my_package.VERSION"}
+readme = {file = "README.md"}
+
 [project]
 name = "oligo-designer-toolsuite"
 #dynamic = ["version"]
