--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,6 @@ jobs:
       run: |
         #$CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-        conda config --add channels bioconda
         
     - name: Setup Conda for Windows
       if: matrix.os == 'windows-latest'
@@ -46,13 +45,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
         conda-channels: anaconda, conda-forge, bioconda
     
-    - name: Install dependencies
+    - name: Install conda dependencies
       run: |
-        python -m pip install --upgrade pip
+        conda config --add channels bioconda
         conda install blast
         conda install bedtools
         conda install bowtie
         conda install bowtie2
+        
+    - name: Install pip dependencies
+      run: |
+        python -m pip install --upgrade pip
         pip install pytest
         pip install -e .
     
