--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         conda config --add channels bioconda
         conda install bedtools
-        conda install blast
+        conda install blast=2.13.0
         conda update blast
         conda install bowtie
         conda install bowtie2
