--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ build-backend = "setuptools.build_meta"
 
 #[tool.setuptools_scm]
 #write_to = "oligo_designer_toolsuite/_version.py"
+use_scm_version = true
 
 [tool.setuptools]
 packages = ["oligo_designer_toolsuite"]
-use_scm_version = true
+
 
 [tool.setuptools.dynamic]
 #version = {attr = "my_package.VERSION"}
@@ -15,7 +16,7 @@ readme = {file = "README.md"}
 
 [project]
 name = "oligo-designer-toolsuite"
-dynamic = ["version"]
+# dynamic = ["version"]
 #version = "1.0.2"
 authors = [
   {name="Lisa Barros de Andrade e Sousa", email="lisa.barros.andrade.sousa@gmail.com"},
